# mana-panel

./: .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
backend/: .env.example  Cargo.toml  Dockerfile
backend/src/: config.rs  error.rs  lib.rs  main.rs
backend/src/api/: applications.rs  auth.rs  docker.rs  files.rs  mod.rs  process.rs  services.rs  system.rs  terminal.rs
backend/src/db/: migrator.rs  mod.rs
backend/src/db/entities/: mod.rs  refresh_token.rs  user.rs
backend/src/db/migrator/: m20260211_000001_create_users_table.rs  m20260211_000002_create_refresh_tokens_table.rs  mod.rs
backend/src/middleware/: auth.rs
backend/src/services/: application.rs  docker.rs  mod.rs  monitor.rs  password.rs  user.rs
deploy/reverse-proxy/: docker-compose.yml  env.example
deploy/reverse-proxy/caddy/: Caddyfile
frontend/: .dockerignore  Dockerfile  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: style.css
frontend/src/api/: applications.ts  index.ts
frontend/src/components/docker/: ContainerLogsModal.vue  ContainerStatsModal.vue  ContainersTab.vue  CreateContainerModal.vue  ImagesTab.vue  PullImageModal.vue
frontend/src/layouts/: MainLayout.vue
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts  system.ts
frontend/src/views/: ApplicationView.vue  DashboardView.vue  DockerView.vue  FilesView.vue  LoginView.vue  ProcessesView.vue  ServicesView.vue  SettingsView.vue  TerminalView.vue
scripts/: cleanup.bat  cleanup.sh  setup_user.sh
